hubSide/force-app/main/default/objects/CalloutErrorsManagement__c/CalloutErrorsManagement__c.object-meta.xml
<CustomObject>
    <description>This object allows to store all information from callout of Salesforce platform.</description>
    <label>Management of Callout Errors</label>
    <nameField>
        <label>Callout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management of Callout Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>