hubSide/force-app/main/default/objects/CalloutErrorsManagement__c/fields/CalloutErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>CalloutErrorMessage__c</fullName>
    <description>Message to identify the error. Link to the error code</description>
    <label>Error message in the callout</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>