hubSide/force-app/main/default/objects/CalloutErrorsManagement__c/fields/CalloutStatusCode__c.field-meta.xml
<CustomField>
    <fullName>CalloutStatusCode__c</fullName>
    <description>Status code to identify the answer.</description>
    <label>Status code in the callout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>