hubSide/force-app/main/default/objects/CalloutErrorsManagement__c/fields/CaseRecord__c.field-meta.xml
<CustomField>
    <fullName>CaseRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the case</description>
    <label>Case Record</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Management of Callout Errors</relationshipLabel>
    <relationshipName>ManagementCalloutErrors</relationshipName>
    <type>Lookup</type>
</CustomField>