hubSide/force-app/main/default/objects/CalloutErrorsManagement__c/fields/DocumentLink__c.field-meta.xml
<CustomField>
    <fullName>DocumentLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Link</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Management of Callout Errors</relationshipLabel>
    <relationshipName>ManagementCalloutErrors</relationshipName>
    <type>Lookup</type>
</CustomField>