hubSide/force-app/main/default/objects/CalloutErrorsManagement__c/fields/JSONSOAPBodySent__c.field-meta.xml
<CustomField>
    <fullName>JSONSOAPBodySent__c</fullName>
    <description>Details of the JSON or SOAP body sent</description>
    <label>JSON or SOAP body sent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>