hubSide/force-app/main/default/objects/CalloutErrorsManagement__c/fields/PaiementVersementLink__c.field-meta.xml
<CustomField>
    <fullName>PaiementVersementLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Paiement Versement linked to the callout</description>
    <label>Paiement Versement Link</label>
    <referenceTo>Paiement_Versement__c</referenceTo>
    <relationshipLabel>Management of Callout Errors</relationshipLabel>
    <relationshipName>ManagementCalloutErrors</relationshipName>
    <type>Lookup</type>
</CustomField>