hubSide/force-app/main/default/objects/CalloutErrorsManagement__c/fields/RunComment__c.field-meta.xml
<CustomField>
    <fullName>RunComment__c</fullName>
    <description>Run comment fields</description>
    <label>Run Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>