hubSide/force-app/main/default/objects/CalloutErrorsManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CaseRecord__c</columns>
    <columns>CalloutStatusCode__c</columns>
    <columns>CalloutErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>